# plant-disease-hybrid-cnn-vit

./: .gitignore  README.md  pyproject.toml  training_config.json
src/dataset/: analyze_color_modes.py  analyze_data.py  get_data.py
src/plant_disease/: cnn_backbone.py  config.py  patch_embedding.py  pipeline_data.py  train_pipeline.py  vit_transformer.py
