[project]
authors = [{name = "RHOUMA", email = "hedi.rhouma@ird.fr"}]
dependencies = []
name = "plant_disease"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
plant_disease = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
requests = ">=2.32.4,<3"
numpy = ">=2.3.1,<3"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.10.3,<4"
pillow = ">=11.3.0,<12"
pytorch = ">=2.7.1,<3"
scikit-learn = ">=1.7.0,<2"
torchvision = ">=0.22.0,<0.23"
tqdm = ">=4.67.1,<5"
